{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 62,
  "lineage": "b93fdf45-f9f3-a4c8-58f0-4ce75688cf6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03c444a85b89ec18d",
            "domain": "vpc",
            "id": "eipalloc-01896ae277ca503ea",
            "instance": "i-058713dd01a05bc51",
            "network_interface": "eni-02d1504c4af7e6e53",
            "private_dns": "ip-10-0-1-214.us-east-2.compute.internal",
            "private_ip": "10.0.1.214",
            "public_dns": "ec2-3-22-124-21.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.124.21",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.terraform-nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044ff7657da2e9f07",
            "arn": "arn:aws:ec2:us-east-2:625922224967:instance/i-058713dd01a05bc51",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058713dd01a05bc51",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awskeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02d1504c4af7e6e53",
            "private_dns": "ip-10-0-1-214.us-east-2.compute.internal",
            "private_ip": "10.0.1.214",
            "public_dns": "ec2-3-22-124-21.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.124.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-013885ca4b86838aa",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-02652f4d338b97d5b",
            "tags": {
              "Name": "Nat Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05578806fef9d6511"
            ]
          },
          "depends_on": [
            "aws_instance.terraform-public",
            "aws_security_group.allow-nat",
            "aws_subnet.public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7919c33c90f5b58",
            "arn": "arn:aws:ec2:us-east-2:625922224967:instance/i-05975eb32a61c9194",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05975eb32a61c9194",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awskeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00aec5c5a0b0487b7",
            "private_dns": "ip-10-0-2-100.us-east-2.compute.internal",
            "private_ip": "10.0.2.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ba6711894eda3916",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041dde2c1bc8cd571",
            "tags": {
              "Name": "DB-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08ccb7095c2e0577d"
            ]
          },
          "depends_on": [
            "aws_instance.terraform-public",
            "aws_security_group.allow_db",
            "aws_subnet.private_1",
            "data.template_file.ec2-userdata-mysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7919c33c90f5b58",
            "arn": "arn:aws:ec2:us-east-2:625922224967:instance/i-0ba0e4239739ee117",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba0e4239739ee117",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awskeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0596266fdbcb0c737",
            "private_dns": "ip-10-0-1-235.us-east-2.compute.internal",
            "private_ip": "10.0.1.235",
            "public_dns": "ec2-18-222-237-198.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.237.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03d109b521c5d28ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02652f4d338b97d5b",
            "tags": {
              "Name": "Wordpress-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b06507c4cd169f1"
            ]
          },
          "depends_on": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_1",
            "data.template_file.ec2-userdata"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ed8b700b9c9e68bb",
            "owner_id": "625922224967",
            "tags": {
              "Name": "internet-gateway-vpc-terraform"
            },
            "vpc_id": "vpc-061128e022725f7b3"
          },
          "depends_on": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fe112a70b583dd04",
            "owner_id": "625922224967",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-058713dd01a05bc51",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-02d1504c4af7e6e53",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table_vpc_terraform"
            },
            "vpc_id": "vpc-061128e022725f7b3"
          },
          "depends_on": [
            "aws_instance.terraform-nat",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-060983dbadc1911f7",
            "owner_id": "625922224967",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed8b700b9c9e68bb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table_vpc_terraform"
            },
            "vpc_id": "vpc-061128e022725f7b3"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1e834f7f1a0b5c2",
            "route_table_id": "rtb-0fe112a70b583dd04",
            "subnet_id": "subnet-041dde2c1bc8cd571"
          },
          "depends_on": [
            "aws_route_table.route-private",
            "aws_subnet.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad65cbc6cbd6baa4",
            "route_table_id": "rtb-060983dbadc1911f7",
            "subnet_id": "subnet-02652f4d338b97d5b"
          },
          "depends_on": [
            "aws_route_table.route-public",
            "aws_subnet.public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625922224967:security-group/sg-05578806fef9d6511",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-05578806fef9d6511",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_nat",
            "name_prefix": null,
            "owner_id": "625922224967",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-061128e022725f7b3"
          },
          "depends_on": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625922224967:security-group/sg-08ccb7095c2e0577d",
            "description": "Allow DB inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ccb7095c2e0577d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_DB_connection",
            "name_prefix": null,
            "owner_id": "625922224967",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-061128e022725f7b3"
          },
          "depends_on": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625922224967:security-group/sg-01b06507c4cd169f1",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b06507c4cd169f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_SSH",
            "name_prefix": null,
            "owner_id": "625922224967",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-061128e022725f7b3"
          },
          "depends_on": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625922224967:subnet/subnet-041dde2c1bc8cd571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-041dde2c1bc8cd571",
            "map_public_ip_on_launch": false,
            "owner_id": "625922224967",
            "tags": {
              "Name": "private_1_vpc_terraform"
            },
            "vpc_id": "vpc-061128e022725f7b3"
          },
          "depends_on": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625922224967:subnet/subnet-02652f4d338b97d5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02652f4d338b97d5b",
            "map_public_ip_on_launch": true,
            "owner_id": "625922224967",
            "tags": {
              "Name": "public_1_vpc_terraform"
            },
            "vpc_id": "vpc-061128e022725f7b3"
          },
          "depends_on": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625922224967:vpc/vpc-061128e022725f7b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094522ce0091667c1",
            "default_route_table_id": "rtb-0ad73a2f37daf2992",
            "default_security_group_id": "sg-00d79477b3ac04be8",
            "dhcp_options_id": "dopt-8f6fa5e4",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-061128e022725f7b3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ad73a2f37daf2992",
            "owner_id": "625922224967",
            "tags": {
              "Name": "Vpc-Terraform"
            }
          }
        }
      ]
    }
  ]
}